--- a/XTask/war/XTask.html
+++ b/XTask/war/XTask.html
@@ -23,7 +23,7 @@
     <!-- If you add any GWT meta tags, they must   -->
     <!-- be added before this line.                -->
     <!--                                           -->
-    <script type="text/javascript" language="javascript" src="tasksgwt/tasksgwt.nocache.js"></script>
+    <script type="text/javascript" src="tasksgwt/tasksgwt.nocache.js"></script>
   </head>
 
   <!--                                           -->
