--- a/XTask/src/test.htm
+++ b/XTask/src/test.htm
@@ -20,7 +20,7 @@
 		function initLastRefresh(_date) {
 			var h = _date.getHours() - 8;
 			var ret = new Date();
-			ret = ret.setHours(h-h%6);
+			ret.setHours(h-h%6);
 			return ret;
 		}
 		
@@ -33,18 +33,23 @@
 					+ dateParam.getDate() + "_" + zweistellig(dateParam.getHours()) + "00";
 		}
 		function imageLink(type) {
-			return "http://www.dmi.dk/fileadmin/SeaForecast/vestlige_osterso/" + type + "." + dateStr(lastRefresh) + "." + dateStr(date) + ".png"
+			return "http://www.dmi.dk/fileadmin/SeaForecast/vestlige_osterso/" + type 
+					+ "." + dateStr(lastRefresh) + "." + dateStr(date) + ".png"
 		}
 		function next(count) {
 			date.addHours(count);
 			display();
 		}
+		function dateDisplStr(d) {
+			return d.getDate() + "." + (d.getMonth()+1) + "." + (d.getYear()+1900) + " - " 
+					+ d.getHours() + ":00";
+		}
 		function display() {
 			document.getElementById("Wind").src=imageLink("Wind");
 			document.getElementById("WindDirection").src=imageLink("WindDirection");
 			document.getElementById("label").innerHTML="\t" + Wochentag[date.getDay()] + " , " +
-				+ date.getDate() + "." + (date.getMonth()+1) + "." + (date.getYear()+1900) + " - " + date.getHours() + ":00" 
-				;//+ "   " + dateStr(date);
+				+ dateDisplStr(date);
+				//+ "   vom " + dateDisplStr(lastRefresh);
 		}
 	</script>
 </head>
