--- a/XTask/src/test.htm
+++ b/XTask/src/test.htm
@@ -1,56 +1,127 @@
 <!DOCTYPE html>
 <html>
 <head>  
+	<meta charset="UTF-8">
     <title>DMI-Forecast</title>
 	<style type="text/css">
-		.Button { background-color:#aaa; color:#fff; width:100px; height:30px; border:2px solid #ddd; font-size:20px}
+		.Button { background-color:#aaa; color:#fff; width:80px; height:30px; border:2px solid #ddd; font-size:20px}
 	</style>
 	<script>
 		Date.prototype.addHours = function(h) {    
 			this.setTime(this.getTime() + (h*60*60*1000)); 
 			return this;   
 		}
-		var Wochentag = new Array("Sonntag", "Montag", "Dienstag", "Mittwoch",
+		Date.prototype.copy = function() {
+			ret = new Date()
+			ret.setTime(this.getTime()); 
+			return ret;   
+		}
+		Wochentag = new Array("Sonntag", "Montag", "Dienstag", "Mittwoch",
                           "Donnerstag", "Freitag", "Samstag");
 						  
-		var date = new Date();
+		var actualImageDate;
 		
-		var lastRefresh = initLastRefresh(date);
+		var lastRefresh;
 		
-		function initLastRefresh(_date) {
-			var h = _date.getHours() - 8;
-			var ret = new Date();
-			ret.setHours(h-h%6);
-			return ret;
+		var lastImage;
+		
+		function init() {
+			actualImageDate = new Date();
+			actualImageDate.setMilliseconds(0);
+			actualImageDate.setSeconds(0);
+			actualImageDate.setMinutes(0);
+			
+			hours = actualImageDate.getHours();
+			if (hours < 2) {
+				hours = hours + 12;
+			} else 
+			if (hours >= 2 && hours < 8) {
+				hours = hours + 6;
+			} else 
+			if (hours >= 14 && hours < 20) {
+				hours = hours - 6;
+			} else 
+			if (hours >= 20) {
+				hours = hours - 12;
+			}
+			setLastRefresh(actualImageDate.copy().addHours(-hours));
+			//print(dateStr(actualImageDate) + "  /  " + hours)
+			display();
 		}
 		
 		function zweistellig(zahl) {
 			if (zahl > 9) return "" + zahl 
 			else return "0" + zahl
 		}
+		
 		function dateStr(dateParam) {
-			return (dateParam.getYear()+1900) + zweistellig(dateParam.getMonth()+1) 
+			return dateParam.getFullYear() + zweistellig(dateParam.getMonth()+1) 
 					+ dateParam.getDate() + "_" + zweistellig(dateParam.getHours()) + "00";
 		}
-		function imageLink(type) {
+		
+		function imageLink(type, refreshDate, imgDate) {
 			return "http://www.dmi.dk/fileadmin/SeaForecast/vestlige_osterso/" + type 
-					+ "." + dateStr(lastRefresh) + "." + dateStr(date) + ".png"
+					+ "." + dateStr(refreshDate) + "." + dateStr(imgDate) + ".png"
 		}
+		
 		function next(count) {
-			date.addHours(count);
+			actualImageDate.addHours(count);
 			display();
 		}
-		function dateDisplStr(d) {
-			return d.getDate() + "." + (d.getMonth()+1) + "." + (d.getYear()+1900) + " - " 
-					+ d.getHours() + ":00";
+		
+		function dateDisplStr(date) {
+			return date.getDate() + "." + (date.getMonth()+1) + "." + (date.getFullYear()) + " - " 
+					+ date.getHours() + ":00";
 		}
+		
 		function display() {
-			document.getElementById("Wind").src=imageLink("Wind");
-			document.getElementById("WindDirection").src=imageLink("WindDirection");
-			document.getElementById("label").innerHTML="\t" + Wochentag[date.getDay()] + " , " +
-				+ dateDisplStr(date);
-				//+ "   vom " + dateDisplStr(lastRefresh);
+			document.getElementById("Wind").src = imageLink("Wind", lastRefresh, actualImageDate);
+			document.getElementById("WindDirection").src = imageLink("WindDirection", lastRefresh, actualImageDate);
+			document.getElementById("label").innerHTML = Wochentag[actualImageDate.getDay()] + ", "
+					+ dateDisplStr(actualImageDate) + "   ";
+			document.getElementById("refreshDateBtn").value = lastRefresh.getHours() + ":00";
+			print(imageLink("Wind", lastRefresh, actualImageDate));
+			preloadNext(5)
 		}
+		
+		function preload(tmpDate) {
+			img = new Image();
+			img.src = imageLink("Wind", lastRefresh, tmpDate);
+			img = new Image();
+			img.src = imageLink("WindDirection", lastRefresh, tmpDate);
+		}
+		
+		function preloadNext(count) {
+			var tmpDate = actualImageDate.copy();
+			for (var i = 1; i <= count; i++) {
+				tmpDate.addHours(1)
+				preload(tmpDate)
+			}
+		}
+		
+		function setLastRefresh(val) {
+			lastRefresh = val;
+			lastImage = lastRefresh.copy().addHours(56);
+		}
+		
+		function testRefresh() {
+ 			var newRefresh = lastRefresh.copy().addHours(6);
+			img = new Image();
+			img.onload = function() {
+				setLastRefresh(newRefresh);
+				display();
+			}
+			img.src = imageLink("Wind", newRefresh, actualImageDate);
+		}
+		
+		function print(str) {
+			document.getElementById("print").innerHTML = str
+		}
+		
+		function showValue(newValue) {
+			document.getElementById("print").innerHTML=newValue;
+		}
+		
 	</script>
 </head>
 <body class="fullpage">
@@ -58,14 +129,18 @@
 		<div style="position: absolute; z-index:1"><img id="Wind" class="overlayImage"></div> 
 		<div style="position: relative; z-index:2"><img id="WindDirection" class="overlayImage"></div> 
 	</div>
-	<input type="submit" class="Button" value="<<" onclick="next(-5)">
-	<input type="submit" class="Button" value="<" onclick="next(-1)">
-	<input type="submit" class="Button" value=">" onclick="next(1)">
-	<input type="submit" class="Button" value=">>" onclick="next(5)">
-	<label>&nbsp;&nbsp;&nbsp;&nbsp;</label>
+	<input type="submit" class="Button" value="<<" onclick="next(-5)"/>
+	<input type="submit" class="Button" value="<" onclick="next(-1)"/>
+	<input type="submit" class="Button" value=">" onclick="next(1)"/>
+	<input type="submit" class="Button" value=">>" onclick="next(5)"/>
+	<label>&nbsp;&nbsp;</label>
 	<label id="label"></label>
+	<label>&nbsp;&nbsp;</label>
+	<input type="submit" class="Button" id="refreshDateBtn" onclick="testRefresh()"/>
+	<br>
+	<label id="print"></label>
 	<script>
-		display();
+		init();
 	</script>
 </body>
 </html>
