--- a/Test/WebContent/jq-text.htm
+++ b/Test/WebContent/jq-text.htm
@@ -19,6 +19,8 @@
 	</style>
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js">
+</script>
+<script>
 	$(function(){
 		$()
 
