--- a/XTask/war/WEB-INF/classes/test.htm
+++ b/XTask/war/WEB-INF/classes/test.htm
@@ -35,7 +35,7 @@
 			height:40px;
 		}
 		.sliderpart {
-			width: 13px; height: 30px;
+			height: 30px;
 			display: block;
     		position: relative;
     		float: left;
@@ -63,6 +63,7 @@
 		
 		var FirstImgDelay = 8;
 		var ImageCount = 49;
+		var SliderPartWidth = 13;
 		
 		function init() {
 			initActualImageDate();
@@ -89,6 +90,7 @@
 			for (var i = 0; i < ImageCount; i++) {
 				var div = document.createElement("div");
 				div.className = "sliderpart";
+				div.style.width = SliderPartWidth + "px";
 				div.id = i;
 				div.onmouseover = function() {
 					this.style.backgroundColor="#555";
@@ -97,6 +99,12 @@
 				}
 				div.onmouseout = function() {
 					this.style.backgroundColor="#aaa";
+				}
+				div.ontouchstart = function(e) {
+					var img = e.touches[0].screenX / SliderPartWidth
+					e.stopPropagation()
+					e.preventDefault()
+					setActImage(nr)
 				}
 				document.getElementById("navslider").appendChild(div);
 			}
