--- a/Test/WebContent/dmi.html
+++ b/Test/WebContent/dmi.html
@@ -18,8 +18,9 @@
 		<input type="submit" class="arrowbtn Button" value=">" onclick="nextImage(1)"/>
 		<input type="submit" class="arrowbtn Button" value=">>" onclick="nextImage(5)"/>
 		<label>&nbsp;</label>
-		<label id="datelabel" style =></label>
+		<label id="datelabel"></label>
 		<label>&nbsp;</label>
+		<label id="refreshLabel" title="Zeit der Vorhersageberechnung" ></label>
 		<input type="submit" class="Button" title="Zeit der Vorhersageberechnung" id="refreshDateBtn" 
 				onclick="testRefresh()"/>
 	</div>
